<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/mainId"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleWindowId"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:maxHeight="150dp"
            android:text="@string/title_window"
            android:textSize="30sp" />

        <View
            android:id="@+id/paddingViewId"
            android:layout_width="match_parent"
            android:layout_height="75dp" />


        <EditText
            android:id="@+id/loginEditTextId"
            style="@style/AppThemeEditText"
            android:layout_width="match_parent"
            android:drawableStart="@android:drawable/sym_action_email"
            android:ems="10"
            android:hint="@string/description_login_input"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/passwordEditTextId"
            style="@style/AppThemeEditText"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawableEnd="@android:drawable/ic_menu_view"
            android:ems="10"
            android:hint="@string/description_password_input"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <Button
            android:id="@+id/buttonLoginId"
            style="@style/AppThemeButton"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:maxWidth="350dp"
            android:text="@string/button_login" />

        <Button
            android:id="@+id/buttonRegId"
            style="@style/AppThemeButton"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:maxWidth="350dp"
            android:text="@string/button_reg" />

        <Button
            android:id="@+id/forgotPasswordId"
            style="@style/AppThemeButton.NoBorder"
            android:text="@string/button_forgot" />

    </LinearLayout>
</RelativeLayout>