<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegActivity">

    <LinearLayout
        android:id="@+id/mainId"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleWindowId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxHeight="150dp"
            android:text="@string/title_register"
            android:textSize="30sp" />

        <View
            android:id="@+id/paddingViewId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="10dp" />

        <EditText
            android:id="@+id/emailEditTextId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@android:drawable/sym_action_email"
            android:ems="10"
            android:hint="@string/description_login_input"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/nameEditTextId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:ems="10"
            android:hint="@string/description_name_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordEditTextId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawableEnd="@android:drawable/ic_menu_view"
            android:ems="10"
            android:hint="@string/description_password_input"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/repasswordEditTextId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawableEnd="@android:drawable/ic_menu_view"
            android:ems="10"
            android:hint="@string/description_repassword_input"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/politiceRegistrationId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_input_get"
            android:editable="false"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="none"
            android:text="@string/text_political_registration"
            android:textSize="10sp"
            tools:targetApi="o" />

        <Button
            android:id="@+id/buttonRegId"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:maxWidth="350dp"
            android:text="@string/button_reg_accept" />

        <Button
            android:id="@+id/buttonCancelId"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:maxWidth="350dp"
            android:text="@string/button_cancel" />

    </LinearLayout>
</RelativeLayout>