<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.EventListFragment">

    <RelativeLayout
        android:id="@+id/main_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/mainTopBarId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorBackgroundTitle"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/title_profile" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/mainTopBarId"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:id="@+id/profile_main_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/image_profile_id"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_circle"
                        android:contentDescription="@string/description_profile_photo"
                        android:cropToPadding="false"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_event_element_def" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editText_name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-5dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/student"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/student"
                    android:textColor="@color/colorDarkText"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editText_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-5dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/email"
                    android:textColor="@color/colorDarkText"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editText_university_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-5dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/university"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/university"
                    android:textColor="@color/colorDarkText"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editText_faculty_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-5dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/faculty"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/faculty"
                    android:textColor="@color/colorDarkText"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editText_group_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-5dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/group"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/group"
                    android:textColor="@color/colorDarkText"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editText_num_student_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-5dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/number_student"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/number_student"
                    android:textColor="@color/colorDarkText"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</FrameLayout>